<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="gcu.production.qr_check.Authorization.UI.AuthorizationFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fragmentInfo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:gravity="center|bottom"
        android:text="@string/infoWindowRegister"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        app:fontFamily="@font/bandera_small_font"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:layout_weight="1"
        android:fontFamily="@font/bandera_middle_font"
        android:gravity="center|top"
        android:paddingTop="8sp"
        android:text="@string/generalTextRegister"
        android:textColor="@color/colorGray"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/fragmentInfo" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text_form"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSelectCodeCountry"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorTransparent"
            android:fontFamily="@font/bandera_small_font"
            android:gravity="center|end"
            android:text="@string/primaryCountryCode"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            tools:ignore="NestedWeights" />

        <View
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_margin="12sp"
            android:background="@color/colorGrayAdditional" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/registerLogin"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:background="@color/colorTransparent"
            android:fontFamily="@font/bandera_small_font"
            android:hint="@string/infoEditTextUserPhone"
            android:inputType="number"
            android:textSize="16sp" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNextStage"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/general_complete_btn_form"
        android:fontFamily="@font/bandera_small_font"
        android:hint="@string/textNextStageRegister"
        android:textColorHint="@color/colorWhite"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>