<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="gcu.production.qr_check.BasicActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="top"
        android:background="@color/colorGrayBar"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="19sp"
            android:fontFamily="@font/bandera_middle_font"
            android:textColor="@color/colorGeneralThemeApp"
            android:text="@string/infoNameFragmentGeneralAdmin"/>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/t"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_gravity="center">

        <ListView
            android:id="@+id/listAllPoint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="@+id/btnCreatePoint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnCreatePoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/add_icon_form"
            android:background="@color/colorTransparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/bar_icon"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="bottom"
        android:background="@color/colorGrayBar"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="16sp"
                android:background="@color/colorTransparent"
                android:src="@drawable/list_image_btn"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnLaunchAllRecords"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/bandera_small_font"
                android:gravity="center|bottom"
                android:paddingBottom="6sp"
                android:text="@string/btnDataInfoText"
                android:textColor="@color/colorGeneralThemeApp"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="16sp"
                android:background="@color/colorTransparent"
                android:src="@drawable/settings_image_btn"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/settings"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/bandera_small_font"
                android:gravity="center|bottom"
                android:paddingBottom="6sp"
                android:text="@string/itemInfoSettings"
                android:textColor="@color/colorGeneralThemeApp"
                android:textSize="12sp" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>